genium/src/test/resources/smoke/errors/output/lime/smoke/ErrorsInterface.lime
package smoke

interface ErrorsInterface {
    enum InternalErrorCode {
        ERROR_NONE,
        ERROR_FATAL
    }
    enum ExternalErrors {
        NONE,
        BOOM,
        BUST
    }

    exception Internal(InternalErrorCode)
    exception External(ExternalErrors)

    fun methodWithErrors() throws Internal
    fun methodWithExternalErrors() throws External
    fun methodWithErrorsAndReturnValue(): String throws Internal
}
